cmake_minimum_required(VERSION 2.8.3)
project(ada_launch)

# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -O2")

# find_package(catkin REQUIRED COMPONENTS)

# include_directories(
#   ${catkin_INCLUDE_DIRS}
# )

# catkin_package()

# add_executable(prl_ada_node src/urdf_loader.cpp)
# add_dependencies(prl_ada_node ${catkin_EXPORTED_TARGETS})
# target_link_libraries(prl_ada_node ${catkin_LIBRARIES})

# add_executable(prl_ada_calibration src/calibration.cpp)
# add_dependencies(prl_ada_calibration ${catkin_EXPORTED_TARGETS})
# target_link_libraries(prl_ada_calibration ${catkin_LIBRARIES})

# # backslashes important
# install(
#   DIRECTORY
#   config
#   launch
#   DESTINATION "${CATKIN_PACKAGE_SHARE_DESTINATION}"
# )
